# algorithm_solution

./: .gitignore  Makefile  main.py  pyproject.toml
tests/: test_solution.py
